- fixed nametags being broken for some users - fixed war tower achievements